benchmark-results/main/cseq/concurrentwitness2test.2025-11-17_11-13-00.logfiles/SV-COMP23_unreach-call.cseq-mix000.oepc.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix000.oepc.yml/mix000.oepc.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix000.oepc.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 85, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_m3keuj4r/tmp/tmppa_0j5ai.c
Compilation started
/tmp/BenchExec_run_m3keuj4r/tmp/tmppa_0j5ai.c: In function ‘P0’:
/tmp/BenchExec_run_m3keuj4r/tmp/tmppa_0j5ai.c:574:19: error: ‘FALSE’ undeclared (first use in this function)
  574 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_m3keuj4r/tmp/tmppa_0j5ai.c:574:19: note: each undeclared identifier is reported only once for each function it appears in
/tmp/BenchExec_run_m3keuj4r/tmp/tmppa_0j5ai.c:575:19: error: ‘TRUE’ undeclared (first use in this function)
  575 |   weak$$choice2 = TRUE;;
      |                   ^~~~
/tmp/BenchExec_run_m3keuj4r/tmp/tmppa_0j5ai.c: In function ‘P1’:
/tmp/BenchExec_run_m3keuj4r/tmp/tmppa_0j5ai.c:616:19: error: ‘FALSE’ undeclared (first use in this function)
  616 |   weak$$choice0 = FALSE;;
      |                   ^~~~~

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
